# cmake_SDL_TEMPLATE

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
